--- a/pages/index.css
+++ b/pages/index.css
@@ -1,14 +1,14 @@
 .content {
-  background-color: #0a2750;
   max-width: 1600px;
   min-width: 1100px;
+  background-color: #0a2750;
 }
 
 .footer {
-  background-color: #0a2850;
   max-width: 1600px;
   min-width: 1100px;
   height: 40vh;
+  background-color: #0a2850;
 }
 
 .footer__content {
@@ -17,36 +17,36 @@
 }
 
 .footer__logo {
-  margin-top: 100px;
-  margin-left: 80px;
   width: 105px;
   height: 39px;
+  margin-top: 100px;
+  margin-left: 80px;
 }
 
 .footer__circle {
-  margin-top: -248px;
-  margin-left: -58px;
   width: 340px;
   height: 340px;
   background-color: #2f80ed;
   border-radius: 170px;
   z-index: 1;
+  margin-top: -248px;
+  margin-left: -58px;
 }
 
 .footer__social {
+  color: #fff;
   margin-right: 80px;
   margin-top: 60px;
-  color: #fff;
 }
 
 .footer__social-heading {
-  line-height: 20px;
   margin-bottom: 20px;
   text-align: right;
   font-family: "Inter", "Arial", sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 16px;
+  line-height: 20px;
 }
 
 .footer__social-list {
@@ -60,13 +60,13 @@
 }
 
 .footer__social-link {
-  color: #fff;
-  text-decoration: none;
   font-family: "Inter", "Arial", sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
   line-height: 20px;
+  color: #fff;
+  text-decoration: none;
 }
 
 .footer__social-link:focus {
@@ -85,10 +85,10 @@
 
 .footer__copyright {
   color: #fff;
-  margin-left: 80px;
-  font-family: "Inter", "Arial", sans-serif;
   margin-top: 60px;
   margin-bottom: 60px;
+  margin-left: 80px;
+  font-family: "Inter", "Arial", sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
@@ -101,17 +101,18 @@
 }
 
 .header {
-  min-height: 720px;
-  max-height: 800px;
   display: flex;
   flex-direction: column;
   height: 100vh;
+  min-height: 720px;
+  max-height: 800px;
   position: relative;
   box-sizing: border-box;
+  padding: 30px 80px 40px;
   background-color: #ffffff;
   background-image: url(../images/background_header.svg);
   background-size: cover;
-  padding: 30px 80px 40px;
+  margin-left: 15px;
 }
 
 .header__content {
@@ -124,51 +125,51 @@
 }
 
 .header__title {
-  font-family: "Inter", "Arial", sans-serif;
-  margin: 183px 0 0;
   max-width: 709px;
   font-size: 58px;
   line-height: 72px;
   font-weight: 500;
   font-style: normal;
   letter-spacing: -1px;
+  font-family: "Inter", "Arial", sans-serif;
+  margin: 183px 0 0;
 }
 
 .header__span-accent {
-  color: #2f80ed;
-  display: block;
   font-family: "Noto", "times new roman", Serif;
   font-style: italic;
   font-weight: normal;
   font-size: 58px;
   line-height: 72px;
+  color: #2f80ed;
+  display: block;
 }
 
 .header__description {
-  font-family: "Noto", "times new roman", Serif;
   font-size: 20px;
-  margin: 28px 0 0;
   line-height: 30px;
   padding: 0;
+  margin: 28px 0 0;
   max-width: 683px;
+  font-family: "Noto", "times new roman", Serif;
   font-weight: normal;
   font-style: normal;
 }
 
 .header__image {
   width: 646px;
-  top: 124px;
-  right: 5px;
   height: 568px;
   position: absolute;
+  top: 124px;
+  right: 5px;
 }
 
 .header__footer {
-  align-items: center;
-  justify-content: space-between;
   margin-top: auto;
   width: 100%;
   display: flex;
+  align-items: center;
+  justify-content: space-between;
   box-sizing: border-box;
 }
 
@@ -182,10 +183,11 @@
   font-family: "Noto", "times new roman", Serif;
   font-style: normal;
   font-weight: 500;
+  font-size: 16px;
   line-height: 20px;
   margin: 0;
-  font-size: 16px;
 }
+
 .nav {
   display: flex;
   justify-content: space-between;
@@ -194,62 +196,72 @@
 .nav__logo {
   height: 39px;
   width: 105px;
-  left: -50px;
   position: relative;
+  left: -50px;
 }
 
 .nav__links {
-  font-family: "Inter", "Arial", sans-serif;
-  justify-content: end;
   display: flex;
   column-gap: 20px;
   list-style-type: none;
-  font-weight: 500;
+  justify-content: end;
   padding-left: 0;
+  font-family: "Inter", "Arial", sans-serif;
   font-style: normal;
+  font-weight: 500;
   font-size: 16px;
   line-height: 20px;
 }
 
 .nav__link {
-  font-weight: bold;
   color: #000000;
   text-decoration: none;
+  font-weight: bold;
   padding: 0;
 }
 
+.page {
+  min-width: 1100px;
+  max-width: 1600px;
+  font-family: "Inter", "Arial", sans-serif;
+  font-size: 16px;
+  line-height: 20px;
+  margin: 0 auto;
+  color: #000000;
+}
+
 .recipes {
-  background-size: cover;
-  background-color: #0a2850;
   width: 100%;
   margin: 0;
+  background-color: #0a2850;
   padding-top: 1px;
   background-image: url(../images/background_recipes.svg);
+  background-size: cover;
   height: 100vh;
 }
 
 .recipes__title {
-  font-family: "Inter", "Arial", sans-serif;
-  color: #ffffff;
   max-width: 580px;
   margin-left: 80px;
+  font-family: "Inter", "Arial", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 44px;
   line-height: 52px;
+  color: #ffffff;
   padding-top: 100px;
 }
 
 .recipes__subtitle {
-  font-family: "Noto", "Times New Roman", Serif;
-  color: #ffffff;
   max-width: 438px;
   margin-left: 80px;
   margin-bottom: 80px;
-  font-weight: normal;
+  font-family: "Noto", "Times New Roman", Serif;
   font-style: normal;
+  font-weight: normal;
   font-size: 20px;
   line-height: 30px;
+  color: #ffffff;
 }
 
 .recipes__videos {
@@ -267,35 +279,120 @@
 }
 
 .recipes__videos-title {
-  color: #ffffff;
-  display: flex;
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
   line-height: 30px;
   font-family: "Inter", "Arial", sans-serif;
+  color: #ffffff;
+  display: flex;
   justify-content: space-between;
   margin-top: 24px;
 }
 
 .recipes__videos-description {
-  color: #ffffff;
-  font-size: 20px;
   font-style: normal;
   font-weight: 500;
+  font-size: 20px;
   line-height: 30px;
   font-family: "Inter", "Arial", sans-serif;
+  color: #ffffff;
 }
 
 .recipes__videos-caption {
   margin: 0;
 }
 
-.page {
-  min-width: 1100px;
+.reservation {
   max-width: 1600px;
+  min-width: 1100px;
+  margin: 0 auto;
+  background-image: url(/images/background_reservation.svg);
+  background-size: cover;
+  background-color: #d9e7ff;
+  position: relative;
+}
+
+.reservation__title {
+  margin: 0 auto 80px auto;
+  text-align: center;
+  padding-top: 100px;
   font-family: "Inter", "Arial", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 52px;
+}
+
+.reservation__form {
+  max-width: 385px;
+  width: 100%;
+  margin: 0 auto;
+  box-sizing: border-box;
+}
+
+.reservation__form-style {
+  border-style: none;
+}
+
+.reservation__form-input {
+  border-radius: 4px;
+  margin-bottom: 32px;
+  margin-top: 8px;
+  height: 60px;
+  width: 100%;
+  padding-left: 20px;
+  font-family: "Inter", "Arial", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 30px;
+}
+
+.reservation__form-label {
+  margin: 0 auto;
+  font-family: "Inter", "Arial", sans-serif;
+  font-style: normal;
+  font-weight: 500;
   font-size: 16px;
   line-height: 20px;
-  margin: 0 auto;
+}
+
+input[type="checkbox"] {
+  border-radius: 2px;
+  height: 20px;
+  width: 20px;
+  margin-top: auto;
+  margin-left: 40px;
+}
+
+.reservation__button {
+  border-radius: 4px;
+  max-width: 385px;
+  width: 100%;
+  background-color: #2f80ed;
+  margin-bottom: 32px;
+  margin-left: 10px;
+  height: 60px;
+  color: #ffffff;
+  line-height: 20px;
+  font-family: "Inter", "Arial", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+}
+
+.reservation__button:hover {
+  opacity: 70%;
+}
+
+.reservation__option {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.reservation__text {
+  text-align: center;
+  margin-left: 12px;
+  margin-right: auto;
 }
