--- a/pages/index.css
+++ b/pages/index.css
@@ -1,14 +1,14 @@
-.content {
-  max-width: 1600px;
-  min-width: 1100px;
-  background-color: #0a2750;
+:root {
+  --color-primary: #2f80ed;
+  --color-dark: #0a2750;
+  --color-light: #d9e7ff;
 }
 
 .footer {
   max-width: 1600px;
   min-width: 1100px;
   height: 40vh;
-  background-color: #0a2850;
+  background-color: var(--color-dark);
 }
 
 .footer__content {
@@ -93,11 +93,6 @@
   font-weight: normal;
   font-size: 16px;
   line-height: 20px;
-}
-
-.form {
-  margin: 100px 0;
-  padding-bottom: 120px;
 }
 
 .header {
@@ -186,6 +181,11 @@
   font-size: 16px;
   line-height: 20px;
   margin: 0;
+}
+
+.form {
+  margin: 100px 0;
+  padding-bottom: 120px;
 }
 
 .nav {
