--- a/pages/index.css
+++ b/pages/index.css
@@ -85,14 +85,13 @@
 
 .footer__copyright {
   color: #fff;
-  margin-top: 60px;
-  margin-bottom: 60px;
-  margin-left: 80px;
   font-family: "Inter", "Arial", sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
   line-height: 20px;
+  padding-bottom: 60px;
+  padding-left: 80px;
 }
 
 .header {
