--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,19 +1,21 @@
 .footer {
   max-width: 1600px;
   min-width: 1100px;
-  height: 40vh;
   background-color: #0a2850;
+  overflow: hidden;
 }
 .footer__content {
   display: flex;
   justify-content: space-between;
 }
+
 .footer__logo {
   width: 105px;
   height: 39px;
   margin-top: 100px;
   margin-left: 80px;
 }
+
 .footer__circle {
   width: 340px;
   height: 340px;
@@ -23,11 +25,13 @@
   margin-top: -248px;
   margin-left: -58px;
 }
+
 .footer__social {
   color: #fff;
   margin-right: 80px;
   margin-top: 60px;
 }
+
 .footer__social-heading {
   margin-bottom: 20px;
   text-align: right;
@@ -37,14 +41,17 @@
   font-size: 16px;
   line-height: 20px;
 }
+
 .footer__social-list {
   list-style: none;
   margin-bottom: 16px;
 }
+
 .footer__social-list-item {
   display: block;
   margin-bottom: 16px;
 }
+
 .footer__social-link {
   font-family: "Inter", "Arial", sans-serif;
   font-style: normal;
@@ -54,26 +61,28 @@
   color: #fff;
   text-decoration: none;
 }
+
 .footer__social-link:focus {
   color: #c1c1c1;
 }
+
 .footer__social-link:hover {
   color: #c1c1c1;
 }
+
 .footer__social-icon {
   margin-right: 10px;
   width: 16px;
   height: 16px;
 }
+
 .footer__copyright {
   color: #fff;
-  margin-top: 60px;
-  margin-bottom: 60px;
-  margin-left: 80px;
-  font-family: "Inter", "Arial", sans-serif;
+  font-family: "Noto Serif", "Time New Roman", "serif";
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
   line-height: 20px;
+  padding-bottom: 60px;
+  padding-left: 80px;
 }
-
