--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -7,6 +7,7 @@
   background-size: cover;
   height: 100vh;
 }
+
 .recipes__title {
   max-width: 580px;
   margin-left: 80px;
@@ -18,11 +19,12 @@
   color: #ffffff;
   padding-top: 100px;
 }
+
 .recipes__subtitle {
   max-width: 438px;
   margin-left: 80px;
   margin-bottom: 80px;
-  font-family: "Noto", "Times New Roman", Serif;
+  font-family: "Noto Serif", "Time New Roman", "serif";
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
@@ -35,9 +37,11 @@
   justify-content: center;
   gap: 40px;
 }
+
 .recipes__videos-container {
   margin: 0;
 }
+
 .recipes__iframe {
   border-style: none;
 }
@@ -62,6 +66,7 @@
   font-family: "Inter", "Arial", sans-serif;
   color: #ffffff;
 }
+
 .recipes__videos-caption {
   margin: 0;
 }
