--- a/pages/index.css
+++ b/pages/index.css
@@ -1,397 +1,9 @@
-:root {
-  --color-primary: #2f80ed;
-  --color-dark: #0a2750;
-  --color-light: #d9e7ff;
-}
-
-.footer {
-  max-width: 1600px;
-  min-width: 1100px;
-  height: 40vh;
-  background-color: var(--color-dark);
-}
-
-.footer__content {
-  display: flex;
-  justify-content: space-between;
-}
-
-.footer__logo {
-  width: 105px;
-  height: 39px;
-  margin-top: 100px;
-  margin-left: 80px;
-}
-
-.footer__circle {
-  width: 340px;
-  height: 340px;
-  background-color: #2f80ed;
-  border-radius: 170px;
-  z-index: 1;
-  margin-top: -248px;
-  margin-left: -58px;
-}
-
-.footer__social {
-  color: #fff;
-  margin-right: 80px;
-  margin-top: 60px;
-}
-
-.footer__social-heading {
-  margin-bottom: 20px;
-  text-align: right;
-  font-family: "Inter", "Arial", sans-serif;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.footer__social-list {
-  list-style: none;
-  margin-bottom: 16px;
-}
-
-.footer__social-list-item {
-  display: block;
-  margin-bottom: 16px;
-}
-
-.footer__social-link {
-  font-family: "Inter", "Arial", sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 20px;
-  color: #fff;
-  text-decoration: none;
-}
-
-.footer__social-link:focus {
-  color: #c1c1c1;
-}
-
-.footer__social-link:hover {
-  color: #c1c1c1;
-}
-
-.footer__social-icon {
-  margin-right: 10px;
-  width: 16px;
-  height: 16px;
-}
-
-.footer__copyright {
-  color: #fff;
-  font-family: "Inter", "Arial", sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 20px;
-  padding-bottom: 60px;
-  padding-left: 80px;
-}
-
-.header {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-  min-height: 720px;
-  max-height: 800px;
-  position: relative;
-  box-sizing: border-box;
-  padding: 30px 80px 40px;
-  background-color: #ffffff;
-  background-image: url(../images/background_header.svg);
-  background-size: cover;
-  margin-left: 15px;
-}
-
-.header__content {
-  display: flex;
-  justify-content: space-between;
-}
-
-.header__content-text {
-  margin-left: 80px;
-}
-
-.header__title {
-  max-width: 709px;
-  font-size: 58px;
-  line-height: 72px;
-  font-weight: 500;
-  font-style: normal;
-  letter-spacing: -1px;
-  font-family: "Inter", "Arial", sans-serif;
-  margin: 183px 0 0;
-}
-
-.header__span-accent {
-  font-family: "Noto", "times new roman", Serif;
-  font-style: italic;
-  font-weight: normal;
-  font-size: 58px;
-  line-height: 72px;
-  color: #2f80ed;
-  display: block;
-}
-
-.header__description {
-  font-size: 20px;
-  line-height: 30px;
-  padding: 0;
-  margin: 28px 0 0;
-  max-width: 683px;
-  font-family: "Noto", "times new roman", Serif;
-  font-weight: normal;
-  font-style: normal;
-}
-
-.header__image {
-  width: 646px;
-  height: 568px;
-  position: absolute;
-  top: 124px;
-  right: 5px;
-}
-
-.header__footer {
-  margin-top: auto;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  box-sizing: border-box;
-}
-
-.header__link {
-  color: #2f80ed;
-  text-decoration: none;
-}
-
-.header__paragraph {
-  color: #838383;
-  font-family: "Noto", "times new roman", Serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  margin: 0;
-}
-
-.form {
-  margin: 100px 0;
-  padding-bottom: 120px;
-}
-
-.nav {
-  display: flex;
-  justify-content: space-between;
-}
-
-.nav__logo {
-  height: 39px;
-  width: 105px;
-  position: relative;
-  left: -50px;
-}
-
-.nav__links {
-  display: flex;
-  column-gap: 20px;
-  list-style-type: none;
-  justify-content: end;
-  padding-left: 0;
-  font-family: "Inter", "Arial", sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.nav__link {
-  color: #000000;
-  text-decoration: none;
-  font-weight: bold;
-  padding: 0;
-}
-
-.page {
-  min-width: 1100px;
-  max-width: 1600px;
-  font-family: "Inter", "Arial", sans-serif;
-  font-size: 16px;
-  line-height: 20px;
-  margin: 0 auto;
-  color: #000000;
-}
-
-.recipes {
-  width: 100%;
-  margin: 0;
-  background-color: #0a2850;
-  padding-top: 1px;
-  background-image: url(../images/background_recipes.svg);
-  background-size: cover;
-  height: 100vh;
-}
-
-.recipes__title {
-  max-width: 580px;
-  margin-left: 80px;
-  font-family: "Inter", "Arial", sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-  color: #ffffff;
-  padding-top: 100px;
-}
-
-.recipes__subtitle {
-  max-width: 438px;
-  margin-left: 80px;
-  margin-bottom: 80px;
-  font-family: "Noto", "Times New Roman", Serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-  color: #ffffff;
-}
-
-.recipes__videos {
-  display: flex;
-  justify-content: center;
-  gap: 40px;
-}
-
-.recipes__videos-container {
-  margin: 0;
-}
-
-.recipes__iframe {
-  border-style: none;
-}
-
-.recipes__videos-title {
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 30px;
-  font-family: "Inter", "Arial", sans-serif;
-  color: #ffffff;
-  display: flex;
-  justify-content: space-between;
-  margin-top: 24px;
-}
-
-.recipes__videos-description {
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 30px;
-  font-family: "Inter", "Arial", sans-serif;
-  color: #ffffff;
-}
-
-.recipes__videos-caption {
-  margin: 0;
-}
-
-.reservation {
-  max-width: 1600px;
-  min-width: 1100px;
-  margin: 0 auto;
-  background-image: url(/images/background_reservation.svg);
-  background-size: cover;
-  background-color: #d9e7ff;
-  position: relative;
-}
-
-.reservation__title {
-  margin: 0 auto 80px auto;
-  text-align: center;
-  padding-top: 100px;
-  font-family: "Inter", "Arial", sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-}
-
-.reservation__form {
-  max-width: 385px;
-  width: 100%;
-  margin: 0 auto;
-  box-sizing: border-box;
-}
-
-.reservation__form-style {
-  border-style: none;
-}
-
-.reservation__form-input {
-  border-radius: 4px;
-  margin-bottom: 32px;
-  margin-top: 8px;
-  height: 60px;
-  width: 100%;
-  padding-left: 20px;
-  font-family: "Inter", "Arial", sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.reservation__form-label {
-  margin: 0 auto;
-  font-family: "Inter", "Arial", sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-input[type="checkbox"] {
-  border-radius: 2px;
-  height: 20px;
-  width: 20px;
-  margin-top: auto;
-  margin-left: 40px;
-}
-
-.reservation__button {
-  border-radius: 4px;
-  max-width: 385px;
-  width: 100%;
-  background-color: #2f80ed;
-  margin-bottom: 32px;
-  margin-left: 10px;
-  height: 60px;
-  color: #ffffff;
-  line-height: 20px;
-  font-family: "Inter", "Arial", sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-}
-
-.reservation__button:hover {
-  opacity: 70%;
-}
-
-.reservation__option {
-  display: flex;
-  justify-content: space-evenly;
-}
-
-.reservation__text {
-  text-align: center;
-  margin-left: 12px;
-  margin-right: auto;
-}
+@import url("../vendor/normalize.css");
+@import url("../blocks/page.css");
+@import url("../blocks/content.css");
+@import url("../blocks/footer.css");
+@import url("../blocks/form.css");
+@import url("../blocks/header.css");
+@import url("../blocks/nav.css");
+@import url("../blocks/recipes.css");
+@import url("../blocks/reservation.css");
