--- a/blocks/header.css
+++ b/blocks/header.css
@@ -10,7 +10,7 @@
   background-color: #ffffff;
   background-image: url(../images/background_header.svg);
   background-size: cover;
-  margin-left: 15px;
+  background-position: center;
 }
 
 .header__content {
@@ -27,9 +27,7 @@
   font-size: 58px;
   line-height: 72px;
   font-weight: 500;
-  font-style: normal;
   letter-spacing: -1px;
-  font-family: "Noto Serif", "Time New Roman", "serif";
   margin: 183px 0 0;
 }
 
@@ -37,21 +35,17 @@
   font-family: "Noto Serif", "Time New Roman", "serif";
   font-style: italic;
   font-weight: normal;
-  font-size: 58px;
-  line-height: 72px;
   color: #2f80ed;
   display: block;
+  letter-spacing: 0;
 }
 
 .header__description {
   font-size: 20px;
   line-height: 30px;
-  padding: 0;
   margin: 28px 0 0;
   max-width: 683px;
   font-family: "Noto Serif", "times new roman", serif;
-  font-weight: normal;
-  font-style: normal;
 }
 
 .header__image {
@@ -64,9 +58,8 @@
 
 .header__footer {
   margin-top: auto;
-  width: 100%;
   display: flex;
-  align-items: center;
+  align-items: end;
   justify-content: space-between;
   box-sizing: border-box;
 }
@@ -78,10 +71,6 @@
 
 .header__paragraph {
   color: #838383;
-  font-family: "Noto Serif", "Time New Roman", "serif";
-  font-style: normal;
   font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
   margin: 0;
 }
