--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -1,6 +1,8 @@
 .nav {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  font-weight: 500;
 }
 
 .nav__logo {
@@ -14,18 +16,11 @@
   display: flex;
   column-gap: 20px;
   list-style-type: none;
-  justify-content: end;
-  padding-left: 0;
-  font-family: "Inter", "Arial", sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
+  padding: 0;
+  margin: 0;
 }
 
 .nav__link {
   color: #000000;
   text-decoration: none;
-  font-weight: bold;
-  padding: 0;
 }
