--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -12,7 +12,6 @@
   max-width: 580px;
   margin-left: 80px;
   font-family: "Inter", "Arial", sans-serif;
-  font-style: normal;
   font-weight: 500;
   font-size: 44px;
   line-height: 52px;
@@ -25,8 +24,6 @@
   margin-left: 80px;
   margin-bottom: 80px;
   font-family: "Noto Serif", "Time New Roman", "serif";
-  font-style: normal;
-  font-weight: normal;
   font-size: 20px;
   line-height: 30px;
   color: #ffffff;
@@ -35,7 +32,10 @@
 .recipes__videos {
   display: flex;
   justify-content: center;
-  gap: 40px;
+  column-gap: 40px;
+  list-style-type: none;
+  padding: 0;
+  margin: 80px 0 0;
 }
 
 .recipes__videos-container {
@@ -44,6 +44,9 @@
 
 .recipes__iframe {
   border-style: none;
+  width: 480px;
+  height: 273px;
+  border: none;
 }
 
 .recipes__videos-title {
