--- a/blocks/reservation.css
+++ b/blocks/reservation.css
@@ -52,8 +52,7 @@
   font-size: 16px;
   line-height: 20px;
 }
-
-input[type="checkbox"] {
+.reservation__form-input[type="checkbox"] {
   border-radius: 2px;
   height: 20px;
   width: 20px;
@@ -77,10 +76,6 @@ input[type="checkbox"] {
   font-size: 16px;
 }
 
-.reservation__button:hover {
-  opacity: 70%;
-}
-
 .reservation__option {
   display: flex;
   justify-content: space-evenly;
@@ -90,4 +85,8 @@ input[type="checkbox"] {
   text-align: center;
   margin-left: 12px;
   margin-right: auto;
+}
+
+.reservation__button:hover {
+  opacity: 70%;
 }
